Fix #6 Correction des Handler et Views avec membership.amount

--- a/src/Pigass/UserBundle/Resources/views/Payment/confirmMember.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Payment/confirmMember.html.twig
@@ -3,9 +3,9 @@
     <div class="panel-body">
         <p>L'adhésion à {{ membership.structure.name }} jusqu'au {{ membership.expiredOn|date('d-m-Y') }} a été enregistrée.</p>
         {% if membership.status == 'paid' or membership.status == 'validated' %}
-        <p>Le paiement de {{ kparam('reg_' ~ membership.structure.slug ~ '_payment') }} € par {% if membership.method.label is not null %}{{ membership.method.label|lower }}{% else %}{{ membership.method.description }}{% endif %} a été bien reçu.</p>
+        <p>Le paiement de {{ membership.amount/100|number_format(2,',',' ') }} € par {% if membership.method.label is not null %}{{ membership.method.label|lower }}{% else %}{{ membership.method.description }}{% endif %} a été bien reçu.</p>
         {% else %}
-            <p>Une fois votre paiement de {{ kparam('reg_' ~ membership.structure.slug ~ '_payment') }} € reçu, votre adhésion pourra être validée.</p>
+            <p>Une fois votre paiement de {{ membership.amount/100|number_format(2,',',' ') }} € reçu, votre adhésion pourra être validée.</p>
         {% endif %}
         {% if kparam('reg_' ~ membership.structure.slug ~ '_print') %}
         <p>Pour finaliser votre adhésion il faut encore que vous renvoyiez <a href="{{ absolute_url(path('user_register_print', {'id': membership.id})) }}">la fiche d'adhésion préremplie signée</a> à :</p>
