--- a/src/Pigass/UserBundle/Resources/views/Register/join.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/join.html.twig
@@ -5,7 +5,7 @@
 {% block action %}
     <li class="panel panel-danger">
         <div class="panel-heading">
-            Vous vous apprêtez à adhérer à {{ structure }} en réglant la cotisation d'un montant de {{ kparam('reg_' ~ structure.slug ~ '_payment') }} €.
+            Vous vous apprêtez à adhérer à {{ structure }} en réglant la cotisation.
         </div>
     </li>
 {% endblock %}
