--- a/src/Pigass/CoreBundle/Resources/views/Receipt/printPDF.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Receipt/printPDF.html.twig
@@ -42,7 +42,7 @@
                     <div class="col-xs-2 title">à :</div>
                     <div class="col-xs-4 value">{{ membership.person.birthplace }}</div>
                     <div class="col-xs-12 blank">&nbsp;</div>
-                    <div class="col-xs-12">Je, soussigné {{ receipt.person }}, {{ receipt.position }} de {{ receipt.structure.name }}{% if receipt.structure.fullname is not null %}, {{ receipt.structure.fullname }}{% endif %}, certifie que {{ membership.person.title }} {{ membership.person }} a bien adhéré au syndicat {{ membership.structure.name }} pour l'année {% if receipt.begin|date('Y') != receipt.end|date('Y') %}{{ receipt.begin|date('Y') }} - {% endif %}{{ receipt.end|date('Y') }} en payant la somme de {{ membership.amount(1) }}.</div>
+                    <div class="col-xs-12">Je, soussigné {{ receipt.person }}, {{ receipt.position }} de {{ receipt.structure.name }}{% if receipt.structure.fullname is not null %}, {{ receipt.structure.fullname }}{% endif %}, certifie que {{ membership.person.title }} {{ membership.person }} a bien adhéré au syndicat {{ membership.structure.name }} pour l'année {% if receipt.begin|date('Y') != receipt.end|date('Y') %}{{ receipt.begin|date('Y') }} - {% endif %}{{ receipt.end|date('Y') }} en payant la somme de {{ membership.amount/number_format(2,',',' ') }} €.</div>
                     <div class="col-xs-12 blank">&nbsp;</div>
                     <div class="col-xs-12">
                         <div class="pull-right">
