Fix 25 Ajout de la table Fee et gestion des différents tarifs

--- a/src/Pigass/UserBundle/Resources/views/Register/list.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/list.html.twig
@@ -97,6 +97,13 @@
                                 {{ icon('piggy-bank') }} Reçu fiscal
                             </a>
                         </li>
+                        {% if is_granted('ROLE_STRUCTURE') %}
+                            <li>
+                                <a href="{{ path('user_register_edit', {'id': membership.id, 'userid': userid, 'slug': slug}) }}" title="Modifier l'adhésion">
+                                    {{ icon('pencil') }} Modifier
+                                </a>
+                            </li>
+                        {% endif %}
                         {% if membership.status == 'registered' or membership.payedOn is null %}
                             {% if is_granted('ROLE_ADMIN') %}
                                 <li>
