--- a/src/Pigass/CoreBundle/Resources/views/Receipt/printPDF.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Receipt/printPDF.html.twig
@@ -30,7 +30,16 @@
             <div class="panel panel-default">
                 <div class="panel-header jumbotron row">
                     <div class="col-xs-2"><img src="{{ absolute_url(asset('uploads/' ~ membership.structure.logo)) }}" alt="Logo de {{ membership.structure.name }}" class="logo-large" /></div>
-                    <h1 class="col-xs-10 centered">Reçu fiscal {% if receipt.end|date('Y') != receipt.begin|date('Y') %}{{ receipt.begin|date('Y') }} - {% endif %}{{ receipt.end|date('Y') }}</h1>
+                    {% if kparam('reg_' ~ membership.structure.slug ~ '_periodicity') == '+ 1 year' %}
+                        {% set period = membership.expiredOn|date('Y') %}
+                    {% elseif kparam('reg_' ~ membership.structure.slug ~ '_periodicity') == '+ 1 month' %}
+                        {% set period = membership.expiredOn|date('m/Y') %}
+                    {% elseif 'years' in kparam('reg_' ~ membership.structure.slug ~ '_periodicity') %}
+                        {% set period = membership.payedOn|date('Y') ~ ' - ' ~ membership.expiredOn|date('Y') %}
+                    {% elseif 'months' in kparam('reg_' ~ membership.structure.slug ~ '_periodicity') %}
+                        {% set period = membership.payedOn|date('m/Y') ~ ' - ' ~ membership.expiredOn|date('m/Y') %}
+                    {% endif %}
+                    <h1 class="col-xs-10 centered">Reçu fiscal {{ period }}</h1>
                 </div>
                 <div class="panel-body row">
                     <div class="col-xs-2 title">Nom :</div>
@@ -42,9 +51,10 @@
                     <div class="col-xs-2 title">à :</div>
                     <div class="col-xs-4 value">{{ membership.person.birthplace }}</div>
                     <div class="col-xs-12 blank">&nbsp;</div>
-                    <div class="col-xs-12">Je, soussigné {{ receipt.person }}, {{ receipt.position }} de {{ receipt.structure.name }}{% if receipt.structure.fullname is not null %}, {{ receipt.structure.fullname }}{% endif %}, certifie que {{ membership.person.title }} {{ membership.person }} a bien adhéré au syndicat {{ membership.structure.name }} pour l'année {% if receipt.begin|date('Y') != receipt.end|date('Y') %}{{ receipt.begin|date('Y') }} - {% endif %}{{ receipt.end|date('Y') }} en payant la somme de {{ (membership.amount/100)|number_format(2,',',' ') }} €.</div>
+                    <div class="col-xs-12">Je, soussigné {{ receipt.person }}, {{ receipt.position }} de {{ receipt.structure.name }}{% if receipt.structure.fullname is not null %}, {{ receipt.structure.fullname }}{% endif %}, certifie que {{ membership.person.title }} {{ membership.person }} a bien adhéré au syndicat {{ membership.structure.name }} pour {{ period }} en payant la somme de {{ (membership.amount/100)|number_format(2,',',' ') }} €.</div>
                     <div class="col-xs-12 blank">&nbsp;</div>
                     <div class="col-xs-12">
+
                         <div class="pull-right">
                             <div class="title">Le {{ "now"|date('d/m/Y') }}</div>
                             <div><img src="{{ absolute_url(asset(vich_uploader_asset(receipt, 'image'))) }}" alt="signature électronique" class="sign"></div>
