--- a/src/Pigass/UserBundle/Resources/views/Register/index.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/index.html.twig
@@ -46,7 +46,7 @@
     {% if filters['ending'] is null %}
         <li class="btn btn-default">
             <a href="{{ path('user_register_filter_add', {'type': 'ending', 'id': 0, 'value': 1, 'slug': slug}) }}" title="Filtrer par adhésion se terminant bientôt">
-                Péromption prochaine ?
+                Péremption prochaine ?
             </a>
         </li>
     {% elseif filters['ending'] == true %}
