--- a/src/Pigass/UserBundle/Resources/views/Register/printPDF.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/printPDF.html.twig
@@ -37,21 +37,23 @@
                     <div class="col-xs-4 value">{{ membership.person.birthday|date('d/m/Y') }}</div>
                     <div class="col-xs-2 title">à :</div>
                     <div class="col-xs-4 value">{{ membership.person.birthplace }}</div>
-                    <div class="col-xs-3 title">Adresse email :</div>
-                    <div class="col-xs-9 value">{{ membership.person.user.email }}</div>
+                    <div class="col-xs-2 title">Adresse email :</div>
+                    <div class="col-xs-10 value">{{ membership.person.user.email }}</div>
                     <div class="col-xs-4 title">Adresse professionnelle :</div>
                     <div class="col-xs-8 value">{{ membership.person.PrintableAddress(false) }}</div>
                     {% if form %}
                         {{ form_widget(form) }}
                     {% else %}
                         {% for info in infos %}
-                            <div class="col-xs-6">{{ info.question.name }}</div>
-                            <div class="col-xs-6">
-                                {% if info.question.type == 7 %}
-                                    {{ info.value|date('d/m/Y') }}
-                                {% else %}
-                                    {{ info.value }}
-                                {% endif %}
+                            <div class="row">
+                                <div class="col-xs-8">{{ info.question.name }}</div>
+                                <div class="col-xs-4">
+                                    {% if info.question.type == 7 %}
+                                        {{ info.value|date('d/m/Y') }}
+                                    {% else %}
+                                        {{ info.value }}
+                                    {% endif %}
+                                </div>
                             </div>
                         {% endfor %}
                     {% endif %}
