#16 Amélioration de la présentation des questions

--- a/src/Pigass/UserBundle/Resources/views/Register/printPDF.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/printPDF.html.twig
@@ -16,7 +16,7 @@
             .jumbotron { width: 100%; margin: 0; }
             .centered { text-align: center; }
             .row { padding: 0; margin: 0; }
-            .info { padding: 3px 0; margin: 0; }
+            .info { padding: 2px 5px; margin: 0; }
             .panel-body { margin: 5px 0; }
         </style>
 
