--- a/src/Pigass/UserBundle/Resources/views/Register/register.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/register.html.twig
@@ -3,6 +3,13 @@
 {% block headline %}Adhésion - enregistrement{% endblock %}
 
 {% block action %}
+    <li class="btn">
+        <div class="progress">
+            <div class="progress-bar progress-bar-primary progress-bar-striped" role="progressbar" aria-valuenow="60" aria-ValueMin = "0"  aria-ValueMax = "100" style="width: 25%;">
+                Inscription
+            </div>
+        </div>
+    </li>
     <li class="panel panel-primary">
         <div class="panel-heading">
             Pour s'inscrire au site et pouvoir adhérer à {{ structure }}, il est nécessaire d'indiquer des coordonnées postales, e-mail et téléphoniques ainsi que quelques informations d'état-civil. Ces informations sont nécessaires au fonctionnement interne de {{ structure }} qui s'engage à ne pas les diffuser à quelque tiers que ce soit sans votre consentement exprès. Nous vous recommandons d'indiquer vos coordonnées professionnelles ici.
