Ajout d'adhérents par l'administateur de structure

--- a/src/Pigass/UserBundle/Resources/views/Register/index.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/index.html.twig
@@ -24,6 +24,11 @@
             {{ icon('open-file') }} Importer
         </a>
     </li>
+    <li class="btn btn-primary">
+        <a href="{{ path('user_register_membership_new', {'slug': slug}) }}">
+            {{ icon('plus') }} Ajouter
+        </a>
+    </li>
     {% if filters['valid'] is null %}
         <li class="btn btn-default">
             <a href="{{ path('user_register_filter_add', {'type': 'valid', 'id': 0, 'value': 1, 'slug': slug}) }}" title="Filtrer par adhésion validée">
