--- a/src/Pigass/UserBundle/Resources/views/Register/questionIndex.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/questionIndex.html.twig
@@ -36,7 +36,7 @@
                 </span>
                 {% endif %}
 
-                <div class="col-sm-3 title">{{ question.name }}</div>
+                <div class="col-sm-3 title">{{ question.name }} (*{{ question.short }})</div>
                 <div class="col-sm-2">{{ question.structure }}</div>
                 <div class="col-sm-2">{{ question.readableType }}</div>
                 <ul class="col-sm-3">
